--- a/landing/started.css
+++ b/landing/started.css
@@ -105,21 +105,27 @@ body{
     background-position: left center;
 }
 
-.newmeeting{
+.joinmeeting{
+    display:flex ;
     position: relative;
     font-size: 20px;
-    left: 500px;
+    left: 220px;
     top: 200px;
     color: white;
     border: 2px solid #126AFC;
     border-radius: 4px;
-    padding: 5px;   
-    width: 200px;
+    padding: 6px;   
+    width: 150px;
     height: 42px;
-    text-align: center;
+    align-items: center;
     background-color: #126AFC;
+    justify-content: space-evenly;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color: #5B7CA1;
+}
+
+.joinmeeting:hover {
+    cursor: default;
 }
