--- a/landing/started.css
+++ b/landing/started.css
@@ -1,174 +1,177 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    }
-
-body{
-    font-family: 'Poppins', sans-serif;
-    height: 100%;
-    width: 100%;
-}
-.navbar{
-    background-color: #020F1A;
-    height: 100px;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
-}
-.logo{
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-    margin-left: 100px; 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.navitems{
-    display: flex;
-    align-items: center;
-    margin-right: 60px;
-    font-size: 15px;
+body {
+  font-family: 'Poppins', sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
-.item{
-    margin: 0 20px;
+.navbar {
+  background-color: #020F1A;
+  height: 100px;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-#signin{
-    border: 2px solid #126AFC;
-    border-radius: 25px;
-    box-sizing: border-box;
-    border-radius: 11px;
-    padding: 10px;
-}
-.ldiv{
-    height: 10vh;
-    position: relative;
-    float: left;
-    width: 50%;
-    background-color: #020F1A;
-    height: 100vh;
-    color: white;
+.logo {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin-left: 100px;
 }
 
-.rdiv{
-    background-color: #020F1A;
-    position: relative;
-    height: 100vh;
-    float: right;
-    position: relative;
-    width: 50%;
-    background-image: url("started.png");
-    background-size: 600px 600px;
-    background-repeat: no-repeat;
+.navitems {
+  display: flex;
+  align-items: center;
+  margin-right: 60px;
+  font-size: 15px;
 }
 
-.text1{
-    position: relative;
-    font-size: 40px;
-    left: 100px;
-    top: 120px;
+.item {
+  margin: 0 20px;
 }
 
-.text2{
-    position: relative;
-    font-size: 20px;
-    left: 100px;
-    top: 150px;
+#signin {
+  border: 2px solid #126AFC;
+  border-radius: 25px;
+  box-sizing: border-box;
+  border-radius: 11px;
+  padding: 10px;
 }
 
-.code{
-    float: left;
-    position: relative;
-    font-size: 15px;
-    color: white;
-    left: 100px;
-    top: 200px;
-    border: 2px solid ;
-    border-radius: 4px;
-    padding: 5px;   
-    width: 270px;
-    height: 42px;
-    text-align: center;
-    background-color: #071F33;
-    border-color: black;
-    padding-bottom: 10px;
-    float: left;
-    outline: none;
-    background-image: url('keyboard.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-size: 40px 40px;
-    background-position: left center;
+.ldiv {
+  height: 10vh;
+  position: relative;
+  float: left;
+  width: 50%;
+  background-color: #020F1A;
+  height: 100vh;
+  color: white;
 }
 
-.joinmeeting{
-    display:flex ;
-    position: relative;
-    font-size: 20px;
-    left: 150px;
-    top: 200px;
-    color: white;
-    border: 2px solid #126AFC;
-    border-radius: 4px;
-    padding: 6px;   
-    width: 200px;
-    height: 42px;
-    align-items: center;
-    background-color: #126AFC;
-    justify-content: space-evenly;
-}
-button{
-    cursor: pointer;
+.rdiv {
+  background-color: #020F1A;
+  position: relative;
+  height: 100vh;
+  float: right;
+  position: relative;
+  width: 50%;
+  background-image: url("started.png");
+  background-size: 600px 600px;
+  background-repeat: no-repeat;
 }
 
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color: #5B7CA1;
+.text1 {
+  position: relative;
+  font-size: 40px;
+  left: 100px;
+  top: 120px;
+}
+
+.text2 {
+  position: relative;
+  font-size: 20px;
+  left: 100px;
+  top: 150px;
+}
+
+.code {
+  float: left;
+  position: relative;
+  font-size: 15px;
+  color: white;
+  left: 100px;
+  top: 200px;
+  border: 2px solid;
+  border-radius: 4px;
+  padding: 5px;
+  width: 270px;
+  height: 42px;
+  text-align: center;
+  background-color: #071F33;
+  border-color: black;
+  padding-bottom: 10px;
+  float: left;
+  outline: none;
+  background-image: url('keyboard.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-size: 40px 40px;
+  background-position: left center;
+}
+
+.joinmeeting {
+  display: flex;
+  position: relative;
+  font-size: 20px;
+  left: 150px;
+  top: 200px;
+  color: white;
+  border: 2px solid #126AFC;
+  border-radius: 4px;
+  padding: 6px;
+  width: 200px;
+  height: 42px;
+  align-items: center;
+  background-color: #126AFC;
+  justify-content: space-evenly;
+}
+
+button {
+  cursor: pointer;
+}
+
+::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: #5B7CA1;
 }
 
 .joinmeeting:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 768px){
-    .rdiv{
-        display: none;
-    }
-    .ldiv{
-        width: 100%;
-    }
-    .text1{
-        left:20px;
-        font-size: 30px;  
-    }
-    .text2{
-        left:20px;
-        width:80%;
-        font-size: 15px;
-    }
-    .getstarted{
-        left: 20px;
-    }
-    .navitems{
-        display: none;
-    }
-    body{
-        width: 100vw;
-        overflow-x: hidden;
-    }
-    .logo{
-        margin-left: 40px;
-    }
-    .code{
-        left: 20px;
-        margin-bottom: 30px;
-    }
-    .joinmeeting{
-        left: 20px;
-        margin-top: 30px;
-
-    }
+@media screen and (max-width: 768px) {
+  .rdiv {
+    display: none;
+  }
+  .ldiv {
+    width: 100%;
+  }
+  .text1 {
+    left: 20px;
+    font-size: 30px;
+  }
+  .text2 {
+    left: 20px;
+    width: 80%;
+    font-size: 15px;
+  }
+  .getstarted {
+    left: 20px;
+  }
+  .navitems {
+    display: none;
+  }
+  body {
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  .logo {
+    margin-left: 40px;
+  }
+  .code {
+    left: 20px;
+    margin-bottom: 30px;
+  }
+  .joinmeeting {
+    left: 20px;
+    margin-top: 30px;
+  }
 }
